--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<body background="https://upload.wikimedia.org/wikipedia/commons/8/82/Gyroscope_precession.gif">
 <h1>PROPHECY FULFILLMENTS</h1>
 <p>The dream's back on.</p>
+<p>Please wait for embedded albums to load.</p>
 
 <iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2971749783/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/dead-dog">DEAD DOG by KJ Spacewolf</a></iframe>
 
