--- a/index.html
+++ b/index.html
@@ -1,62 +1,88 @@
 <!DOCTYPE html>
 <html>
 <body>
-<body background="https://upload.wikimedia.org/wikipedia/commons/8/82/Gyroscope_precession.gif">
+<!--body background="https://upload.wikimedia.org/wikipedia/commons/8/82/Gyroscope_precession.gif">-->
 <h1>PROPHECY FULFILLMENTS</h1>
 <p>The dream's back on.</p>
 <p>Please wait for embedded albums to load.</p>
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2971749783/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/dead-dog">DEAD DOG by KJ Spacewolf</a></iframe>
 
-<iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=1684185349/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://officershitpost.bandcamp.com/album/fuck-deborah">FUCK DEBORAH by OFFICER SHITPOST</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2971749783/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/dead-dog">DEAD DOG by KJ Spacewolf</a></iframe> <--	9/27/2017
+ <br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=563574876/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/foreshock-2">Foreshock by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=1684185349/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://officershitpost.bandcamp.com/album/fuck-deborah">FUCK DEBORAH by OFFICER SHITPOST</a></iframe><--	9/26/2017
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2282714286/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/wasted-afterlife">Wasted Afterlife by The F13s</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=563574876/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/foreshock-2">Foreshock by Happyslap</a></iframe><--	7/22/2017
+<br />
 
-<iframe style="border: 0; width: 350px; height: 720px;" src="https://bandcamp.com/EmbeddedPlayer/album=40652814/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/life-wasted">Life, Wasted by The F13s</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2282714286/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/wasted-afterlife">Wasted Afterlife by The F13s</a></iframe><--	2/13/2017
+<br />
 
-<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=219976668/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/fuck-the-media">Fuck the Media by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 720px;" src="https://bandcamp.com/EmbeddedPlayer/album=40652814/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/life-wasted">Life, Wasted by The F13s</a></iframe><--	11/3/2016
+<br />
 
-<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1735434912/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/album/strange-cousin-the-family-band">Strange Cousin &amp; The Family Band by Strange Cousin &amp; The Family Band</a></iframe>
+<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=219976668/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/fuck-the-media">Fuck the Media by Happyslap</a></iframe><--	7/14/2016
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=1329245574/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://prophecyfulfillments.today/album/spiritual">Spiritual by Ace-K</a></iframe>
+<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1735434912/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/album/strange-cousin-the-family-band">Strange Cousin &amp; The Family Band by Strange Cousin &amp; The Family Band</a></iframe><--	6/1/2016
+<br />
 
-<iframe style="border: 0; width: 350px; height: 442px;" src="https://bandcamp.com/EmbeddedPlayer/track=2878872423/size=large/bgcol=ffffff/linkcol=333333/tracklist=false/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/track/the-funeral">The Funeral by Strange Cousin &amp; The Family</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=1329245574/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://prophecyfulfillments.today/album/spiritual">Spiritual by Ace-K</a></iframe><--	4/26/2016
+<br />
 
-<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1031692321/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/happy-anniversary-2">Happy Anniversary! by The F13s</a></iframe>
+<iframe style="border: 0; width: 350px; height: 442px;" src="https://bandcamp.com/EmbeddedPlayer/track=2878872423/size=large/bgcol=ffffff/linkcol=333333/tracklist=false/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/track/the-funeral">The Funeral by Strange Cousin &amp; The Family</a></iframe><--	4/19/2016
+<br />
 
-<iframe style="border: 0; width: 350px; height: 522px;" src="https://bandcamp.com/EmbeddedPlayer/album=3093510212/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/nothing-matters-media-matters">nothing matters//media matters by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1031692321/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/happy-anniversary-2">Happy Anniversary! by The F13s</a></iframe><--	2/13/2016<br />
 
-<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=2665773570/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/album/suburban-gothic-ep">Suburban Gothic EP by Strange Cousin &amp; The Family</a></iframe>
+<iframe style="border: 0; width: 350px; height: 522px;" src="https://bandcamp.com/EmbeddedPlayer/album=3093510212/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/nothing-matters-media-matters">nothing matters//media matters by Happyslap</a></iframe><--	12/15/2015
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=1868129725/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://retrothreat.bandcamp.com/album/time-after-time">Time After Time by Retro Threat</a></iframe>
+<br />
 
-<iframe style="border: 0; width: 350px; height: 654px;" src="https://bandcamp.com/EmbeddedPlayer/album=521715251/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/end-times">End Times by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=2665773570/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thestrangecousin.bandcamp.com/album/suburban-gothic-ep">Suburban Gothic EP by Strange Cousin &amp; The Family</a></iframe><--	11/12/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 522px;" src="https://bandcamp.com/EmbeddedPlayer/album=3294255477/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://retrothreat.bandcamp.com/album/war-hype-holiday-inn">War Hype/Holiday Inn by Retro Threat</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=1868129725/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://retrothreat.bandcamp.com/album/time-after-time">Time After Time by Retro Threat</a></iframe><--	8/28/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=4107236877/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://skykingx2.bandcamp.com/album/peacekeeper-s-p-a-r-k">Peacekeeper S.P.A.R.K. by skyking</a></iframe>
+<iframe style="border: 0; width: 350px; height: 654px;" src="https://bandcamp.com/EmbeddedPlayer/album=521715251/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/end-times">End Times by Happyslap</a></iframe><--	7/19/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1081352419/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/organ-years">Organ Years by The F13s</a></iframe>
+<iframe style="border: 0; width: 350px; height: 522px;" src="https://bandcamp.com/EmbeddedPlayer/album=3294255477/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://retrothreat.bandcamp.com/album/war-hype-holiday-inn">War Hype/Holiday Inn by Retro Threat</a></iframe><--	7/5/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=3086404647/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/anti-human-front">Anti-Human Front by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 555px;" src="https://bandcamp.com/EmbeddedPlayer/album=4107236877/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://skykingx2.bandcamp.com/album/peacekeeper-s-p-a-r-k">Peacekeeper S.P.A.R.K. by skyking</a></iframe><--	3/2/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3137607126/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/live-the-port-a-john">Live @ the Port-a-John by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 687px;" src="https://bandcamp.com/EmbeddedPlayer/album=1081352419/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://thef13s.bandcamp.com/album/organ-years">Organ Years by The F13s</a></iframe><--	2/13/2015
+<br />
 
-<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=259735184/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://sxeonictheedgehog.bandcamp.com/album/public-sxervice-announcements-demo">Public SxErvice Announcements (demo) by SxEonic The Edgehog</a></iframe>
+<iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=3086404647/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/anti-human-front">Anti-Human Front by Happyslap</a></iframe> <--	10/24/2014<br />
 
-<iframe style="border: 0; width: 350px; height: 654px;" src="https://bandcamp.com/EmbeddedPlayer/album=2431514361/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/do-it">&quot;Do It&quot; by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3137607126/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/live-the-port-a-john">Live @ the Port-a-John by Happyslap</a></iframe><--	8/8/2014
+<br />
 
-<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=1109538300/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://welcometopantsparty.bandcamp.com/album/self-titled-ep">Self Titled EP by Pants Party</a></iframe>
+<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=259735184/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://sxeonictheedgehog.bandcamp.com/album/public-sxervice-announcements-demo">Public SxErvice Announcements (demo) by SxEonic The Edgehog</a></iframe><--	12/20/2013
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3723148042/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/the-public">The Public by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 654px;" src="https://bandcamp.com/EmbeddedPlayer/album=2431514361/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/do-it">&quot;Do It&quot; by Happyslap</a></iframe><--	7/13/2013
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=4098911021/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/awful-people-empty-city-ep">awful people, empty city EP by Happyslap</a></iframe>
+<iframe style="border: 0; width: 350px; height: 588px;" src="https://bandcamp.com/EmbeddedPlayer/album=1109538300/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://welcometopantsparty.bandcamp.com/album/self-titled-ep">Self Titled EP by Pants Party</a></iframe><--	5/22/2013
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=624067949/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/new-world-distorter">New World Distorter by KJ Spacewolf</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3723148042/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/the-public">The Public by Happyslap</a></iframe><--	3/19/2013
+<br />
 
-<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3898352297/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/fighting-the-real-enemy">Fighting the Real Enemy by KJ Spacewolf</a></iframe>
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=4098911021/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/awful-people-empty-city-ep">awful people, empty city EP by Happyslap</a></iframe><--	12/28/2012
+<br />
+
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=624067949/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/new-world-distorter">New World Distorter by KJ Spacewolf</a></iframe><--	9/22/2012
+<br />
+
+<iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=3898352297/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/fighting-the-real-enemy">Fighting the Real Enemy by KJ Spacewolf</a></iframe><--	5/12/2012
+<br />
 
 </body>
 </html>
