--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <p>The dream's back on.</p>
 <p>Please wait for embedded albums to load.</p>
 
-
-9/27/2017--><iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2971749783/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/dead-dog">DEAD DOG by KJ Spacewolf</a></iframe> <--	9/27/2017
+6/8/2018--><iframe style="border: 0; width: 350px; height: 654px;" src="https://bandcamp.com/EmbeddedPlayer/album=42527406/size=large/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://happyslap.bandcamp.com/album/end-times-ii">End Times II by Happyslap!</a></iframe><-- 6/8/2018
+9/27/2017--><iframe style="border: 0; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2971749783/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://kjspacewolf.bandcamp.com/album/dead-dog">DEAD DOG by KJ Spacewolf</a></iframe><--	9/27/2017
  <br />
 
 9/26/2017--><iframe style="border: 0; width: 350px; height: 753px;" src="https://bandcamp.com/EmbeddedPlayer/album=1684185349/size=large/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="http://officershitpost.bandcamp.com/album/fuck-deborah">FUCK DEBORAH by OFFICER SHITPOST</a></iframe><--	9/26/2017
